--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
   --color-card: var(--card);
 
   --radius: var(--radius);
-  --drop-shadow-card: 0 0px 24px rgba(22, 22, 22, 0.08);
+  --drop-shadow-card: 0 0px 24px var(--drop-shadow-color);
   --scale-102: 1.02;
 }
 
@@ -63,6 +63,7 @@
     --input: oklch(0.922 0 0);
     --ring: oklch(0.708 0 0);
     --card: oklch(1 0 0);
+    --drop-shadow-color: oklch(0.145 0 0 / 0.08);
   }
 
   .dark {
@@ -79,6 +80,7 @@
     --input: oklch(1 0 0 / 15%);
     --ring: oklch(0.556 0 0);
     --card: oklch(0.22 0 0);
+    --drop-shadow-color: oklch(0.985 0 0 / 0.05);
   }
 
   * {
