--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,8 @@
     --ring: oklch(0.708 0 0);
     --card: oklch(1 0 0);
     --drop-shadow-color: oklch(0.145 0 0 / 0.08);
-    --dots-color: oklch(0.4449 0.0408 284.62/ 50%);
+    --dots-color: var(--color-muted);
+    --dots-background: oklch(0.3748 0.1762 311 / 30%);
   }
 
   .dark {
@@ -78,7 +79,8 @@
     --ring: oklch(0.556 0 0);
     --card: oklch(0.22 0 0);
     --drop-shadow-color: oklch(0.985 0 0 / 0.05);
-    --dots-color: oklch(0.3748 0.1762 311 / 80%);
+    --dots-color: var(--color-muted);
+    --dots-background: oklch(0.3748 0.1762 311 / 20%);
   }
 
   * {
@@ -96,7 +98,6 @@
 
 .prose .anchor {
   @apply invisible absolute no-underline;
-
   margin-left: -1em;
   padding-right: 0.5em;
   width: 80%;
@@ -156,32 +157,44 @@
   @apply text-secondary-foreground my-4 leading-7;
 }
 
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4 {
+  @apply text-foreground mt-6 mb-2 font-semibold;
+}
+
 .prose h1 {
-  @apply text-foreground mt-6 mb-2 text-3xl font-semibold;
+  @apply text-3xl;
 }
 
 .prose h2 {
-  @apply text-foreground mt-6 mb-2 text-2xl font-semibold;
+  @apply text-2xl;
 }
 
 .prose h3 {
-  @apply text-foreground mt-6 mb-2 text-xl font-semibold;
+  @apply text-xl;
 }
 
 .prose h4 {
-  @apply text-foreground mt-6 mb-2 text-lg font-semibold;
+  @apply text-lg;
 }
 
 .prose strong {
   @apply leading-7 font-semibold;
 }
 
+.prose ul,
+.prose ol {
+  @apply text-secondary-foreground pl-6;
+}
+
 .prose ul {
-  @apply text-secondary-foreground list-disc pl-6;
+  @apply list-disc;
 }
 
 .prose ol {
-  @apply text-secondary-foreground list-decimal pl-6;
+  @apply list-decimal;
 }
 
 .prose > :first-child {
@@ -218,18 +231,6 @@ table {
   @apply text-4xl font-semibold text-pretty;
 }
 
-.divide-dashed-spaced > * + * {
-  border-left: 0.5px dashed var(--color-border);
-  border-image: repeating-linear-gradient(
-      to bottom,
-      transparent 0,
-      transparent 4px,
-      var(--color-border) 4px,
-      var(--color-border) 8px
-    )
-    1;
-}
-
 /* Background dots pattern */
 .dots-pattern {
   background-image: radial-gradient(
@@ -243,22 +244,16 @@ table {
 }
 
 .mask-pattern {
-  mask: radial-gradient(
-    circle at var(--mask-position-x, 50%) var(--mask-position-y, 0%),
+  --mask-gradient: radial-gradient(
+    ellipse 100% 80% at var(--mask-position-x, 50%) var(--mask-position-y, 0%),
     black 0%,
-    black 15%,
-    rgba(0, 0, 0, 0.8) 25%,
-    rgba(0, 0, 0, 0.4) 40%,
-    transparent 60%
+    black 25%,
+    rgba(0, 0, 0, 0.8) 40%,
+    rgba(0, 0, 0, 0.4) 60%,
+    transparent 80%
   );
-  -webkit-mask: radial-gradient(
-    circle at var(--mask-position-x, 50%) var(--mask-position-y, 0%),
-    black 0%,
-    black 15%,
-    rgba(0, 0, 0, 0.8) 25%,
-    rgba(0, 0, 0, 0.4) 40%,
-    transparent 60%
-  );
+  mask: var(--mask-gradient);
+  -webkit-mask: var(--mask-gradient);
 }
 
 /* Fade mask effect */
