--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,16 @@
 
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
+  --color-primary-300: var(--primary-300);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
 
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary-400: var(--secondary-400);
+  --color-secondary-500: var(--secondary-500);
+  --color-secondary-600: var(--secondary-600);
 
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
@@ -19,6 +26,9 @@
   --color-input: var(--input);
   --color-ring: var(--ring);
   --color-card: var(--card);
+
+  --color-highlight-primary: var(--highlight-primary);
+  --color-highlight-secondary: var(--highlight-secondary);
 
   --radius: var(--radius);
   --drop-shadow-card: 0 0px 24px var(--drop-shadow-color);
@@ -51,14 +61,24 @@
     --foreground: oklch(0.145 0 0);
     --primary: oklch(0.205 0 0);
     --primary-foreground: oklch(0.985 0 0);
+    --primary-300: oklch(0.45 0 0);
+    --primary-400: oklch(0.35 0 0);
+    --primary-500: oklch(0.205 0 0);
+    --primary-600: oklch(0.155 0 0);
     --secondary: oklch(0.97 0 0);
-    --secondary-foreground: oklch(0.6 0 0);
+    --secondary-foreground: oklch(0.145 0 0);
+    --secondary-300: oklch(1 0 0);
+    --secondary-400: oklch(0.99 0 0);
+    --secondary-500: oklch(0.97 0 0);
+    --secondary-600: oklch(0.94 0 0);
     --muted: oklch(0.97 0 0);
     --muted-foreground: oklch(0.556 0 0);
     --border: oklch(0.922 0 0);
     --input: oklch(0.922 0 0);
     --ring: oklch(0.708 0 0);
     --card: oklch(1 0 0);
+    --highlight-primary: rgba(255, 255, 255, 0.15);
+    --highlight-secondary: rgba(255, 255, 255, 0.6);
     --drop-shadow-color: oklch(0.145 0 0 / 0.08);
     --dots-color: var(--color-muted);
     --dots-background: oklch(0.3748 0.1762 311 / 20%);
@@ -70,14 +90,24 @@
     --foreground: oklch(0.985 0 0);
     --primary: oklch(0.922 0 0);
     --primary-foreground: oklch(0.205 0 0);
+    --primary-300: oklch(1 0 0);
+    --primary-400: oklch(0.99 0 0);
+    --primary-500: oklch(0.97 0 0);
+    --primary-600: oklch(0.94 0 0);
     --secondary: oklch(0.269 0 0);
-    --secondary-foreground: oklch(0.8 0 0);
+    --secondary-foreground: oklch(0.985 0 0);
+    --secondary-300: oklch(0.45 0 0);
+    --secondary-400: oklch(0.27 0 0);
+    --secondary-500: oklch(0.22 0 0);
+    --secondary-600: oklch(0.15 0 0);
     --muted: oklch(0.269 0 0);
     --muted-foreground: oklch(0.708 0 0);
     --border: oklch(1 0 0 / 5%);
     --input: oklch(1 0 0 / 15%);
     --ring: oklch(0.556 0 0);
     --card: oklch(0.22 0 0);
+    --highlight-primary: rgba(255, 255, 255, 0.1);
+    --highlight-secondary: rgba(255, 255, 255, 0.01);
     --drop-shadow-color: oklch(0.985 0 0 / 0.05);
     --dots-color: var(--color-muted);
     --dots-background: oklch(0.3748 0.1762 311 / 20%);
