--- a/app/globals.css
+++ b/app/globals.css
@@ -194,20 +194,24 @@
   @apply text-foreground mt-6 mb-2 font-semibold;
 }
 
-.prose h1 {
-  @apply text-3xl;
+.prose h1,
+h1 {
+  @apply text-4xl md:text-5xl;
 }
 
-.prose h2 {
-  @apply text-2xl;
+.prose h2,
+h2 {
+  @apply text-3xl md:text-4xl;
 }
 
-.prose h3 {
-  @apply text-xl;
+.prose h3,
+h3 {
+  @apply text-2xl md:text-3xl;
 }
 
-.prose h4 {
-  @apply text-lg;
+.prose h4,
+h4 {
+  @apply text-xl md:text-2xl;
 }
 
 .prose strong {
