--- a/app/globals.css
+++ b/app/globals.css
@@ -194,23 +194,23 @@
   @apply text-foreground mt-6 mb-2 font-semibold;
 }
 
-.prose h1,
-h1 {
+h1,
+.prose h1 {
   @apply text-4xl md:text-5xl;
 }
 
-.prose h2,
-h2 {
+h2,
+.prose h2 {
   @apply text-3xl md:text-4xl;
 }
 
-.prose h3,
-h3 {
+h3,
+.prose h3 {
   @apply text-2xl md:text-3xl;
 }
 
-.prose h4,
-h4 {
+h4,
+.prose h4 {
   @apply text-xl md:text-2xl;
 }
 
